# rust-sentry-demo

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docs.md  install-sentry-latest.sh
src/: main.rs
src/config/: mod.rs
src/logger/: fairing.rs  mod.rs
