[package]
name = "sentry-test-app"
version = "0.1.0"
authors = ["Víctor Martínez <victorcoder2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["helmet"]

[dependencies]
rocket = "0.4.6"
serde = "1.0.123"
serde_json = "1.0.62"
sentry = "0.22.0"
dotenv = "0.15.0"
